--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -158,7 +158,7 @@ This is a collapsible right-aligned modal (`slideover--r`) on top of the live {{
 ::: {.embed}
 This is the nested embed, that has its own styling. Think of it as a callout within the slideovers.
 
-If you update the extension, **make sure to reapply our custom CSS changes!**
+Speaking of important information in callouts ... if you update the extension, **make sure to reapply our custom CSS changes under `slideover.css`!**
 
 :::
 
@@ -192,7 +192,7 @@ When you add `background-interactive="yes"` to the `background-iframe` element, 
 ## {background-iframe="https://app.prod.validmind.ai/" data-preload="yes"}
 
 :::: {.slideover--l .auto-collapse .quarters}
-**This is a collapsible left-aligned modal (`slideover--l`) at half-size on top of the live {{< var vm.product >}} Platform.**
+**This is a collapsible left-aligned modal (`slideover--l`) at three-quarters size on top of the live {{< var vm.product >}} Platform.**
 
 When you add `.auto-collapse` to the slideover, the modal will auto-collapse after five seconds for that slide.
 
@@ -202,7 +202,7 @@ You can adjust the size of the modals, for more or less screen real estate:
 - `.half` — 1/2s or 50% of the default width.
 - `.third` — 1/3 or 33ish% of the default width.
 
-The box will also automatically scroll once past a certain length (a percentage of your screen)...
+The box will also automatically scroll once past a certain length (a percentage of your screen ... if you don't see some scrolling, make your browser window smaller!)...
 
 > Eternal-return right chaos contradict strong enlightenment deceptions virtues strong. Love contradict marvelous of faith. Burying moral battle noble moral strong inexpedient fearful.
 >
