Copy over files from Beck's PR 638

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -8,67 +8,75 @@ resources:
 filters:
     - tachyons
 listing:
-  - id: admin
-    type: grid
-    grid-columns: 1
-    max-description-length: 250
-    sort: false
-    fields: [title, description]
-    contents:
-    - /guide/configuration/accessing-validmind.qmd
-    - /guide/configuration/managing-your-organization.qmd
-    - /guide/configuration/managing-users.qmd
   - id: developer
     type: grid
     grid-columns: 1
     max-description-length: 250
     sort: false
     fields: [title, description]
+    image-height: 250px
     contents:
-    - /developer/validmind-library.qmd
-    - /developer/supported-models.qmd
-    - /developer/samples-jupyter-notebooks.qmd
+      - path: get-started/quickstart-developer.qmd
+        # image: assets/img/developer-diagram.png
   - id: validator
     type: grid
     grid-columns: 1
     max-description-length: 250
     sort: false
     fields: [title, description]
+    image-height: 250px
     contents:
-    - /guide/model-validation/preparing-validation-reports.qmd
-    - /guide/model-validation/working-with-model-findings.qmd
-    - /guide/reporting/working-with-analytics.qmd
+      - path: get-started/quickstart-validator.qmd
+        # image: assets/img/validator-diagram.png
+  - id: admin
+    type: grid
+    grid-columns: 1
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    image-height: 250px
+    contents:
+      - path: get-started/quickstart-administrator.qmd
+        # image: assets/img/admin-diagram.png
   - id: releases
     type: grid
     grid-columns: 3
     max-description-length: 150
     sort: false
-    fields: [title, subtitle, description]
+    fields: [title, description]
     contents:
-    # MAKE-RELEASE-NOTES-LATEST-MARKER
-      - /releases/2025/2025-apr-24/release-notes.qmd
-      - /releases/2025/2025-mar-07/release-notes.qmd
-      - /releases/2025/2025-jan-31/release-notes.qmd
-    # MAKE-RELEASE-NOTES-OLDEST-MARKER
+      - 2024-dec-06/release-notes.qmd
+      - 2024-oct-22/release-notes.qmd
+      - 2024-sep-25/release-notes.qmd
+      - 2024-sep-09/release-notes.qmd
+      - 2024-aug-13/release-notes.qmd
+      - 2024-jul-22/release-notes.qmd
   - id: validmind-academy
     type: grid
-    image-height: 200px
+    grid-columns: 1
+    image-height: 350px
     sort: false
     contents:
-    - path: training/administrator-fundamentals/administrator-fundamentals-register.qmd
-      image: training/administrator-fundamentals/administrator-fundamentals.png
-      title: "Administrator Fundamentals {{< fa gear >}}"
-      subtitle: "Register now {{< fa chevron-right >}}"
-    - path: training/developer-fundamentals/developer-fundamentals-register.qmd
-      title: "Developer Fundamentals {{< fa code >}}"
-      subtitle: "Register now {{< fa chevron-right >}}"
-      image: training/developer-fundamentals/developer-fundamentals.png
-    - path: training/validator-fundamentals/validator-fundamentals-register.qmd
-      image: training/validator-fundamentals/validator-fundamentals.png
-      title: "Validator Fundamentals {{< fa user-check >}}"
-      subtitle: "Register now {{< fa chevron-right >}}"
-    fields: [image, title, subtitle]
+    - path: training/training.qmd
+      # image: assets/img/hero-platform.png
+      title: "ValidMind Academy {{< fa graduation-cap >}}"
+      subtitle: "Learn by doing {{< fa chevron-right >}}"
+    # - path: training/administrator-fundamentals/administrator-fundamentals-register.qmd
+    #   image: training/administrator-fundamentals/administrator-fundamentals.png
+    #   title: "Administrator Fundamentals {{< fa gear >}}"
+    #   subtitle: "Register now {{< fa chevron-right >}}"
+    # - path: training/developer-fundamentals/developer-fundamentals-register.qmd
+    #   title: "Developer Fundamentals {{< fa code >}}"
+    #   subtitle: "Register now {{< fa chevron-right >}}"
+    #   image: training/developer-fundamentals/developer-fundamentals.png
+    # - path: training/validator-fundamentals/validator-fundamentals-register.qmd
+    #   image: training/validator-fundamentals/validator-fundamentals.png
+    #   title: "Validator Fundamentals {{< fa user-check >}}"
+    #   subtitle: "Register now {{< fa chevron-right >}}"
+    fields: [title, subtitle]
 ---
+
+<!-- <div class="watermark">MOCKUP — NOT A FINAL DESIGN</div> -->
 
 ```{=html}
 <style>
@@ -154,11 +162,11 @@ a:hover {
 <!-- Enable custom search functionality-->
 <script src="scripts/validsearch.js"></script>
 
-::: {.tc}
+<!-- ::: {.tc}
 [quickstart](get-started/developer/try-with-jupyterhub.qmd){.button-pink .cta}
 [open-source software](https://github.com/validmind/validmind-library/){.button-white .cta}
 
-:::
+::: -->
 
 :::
 
@@ -199,39 +207,28 @@ a:hover {
 
 :::: {.ph4}
 
-:::: {.navy .f4 .tl}
-[for administrators]{.smallcaps}
+:::: {.f4 .tl}
+[model development]{.smallcaps .accent}
 ::::
 
-:::{#admin}
+::: {.tl}
+Save time by **automating documentation** and **testing** for your models using the ValidMind Library.
+
+Try our Jupyter Notebook **code samples** that walk you through how to:
+
+- Explore documentation templates
+- Run and log tests
+- Integrate with your workflows
 :::
-
-[all user guides](guide/guides.qmd){.button-green .cta}
-
-
-::::
-
-
-:::: 
-
-:::
-
-::: {.w-25-ns .mb4}
-
-:::: {.ba .b--black-10 .br3 .shadow-4 .bg-white .pt4 .pb3 .h-100 .grow .tc}
-
-:::: {.ph4}
-
-:::: {.navy .f4 .tl}
-[for model developers]{.smallcaps}
-::::
 
 :::{#developer}
 :::
 
-[developer reference](/validmind/validmind.qmd){.button-green .cta}
+<!-- [about validmind](guide/guides.qmd){.button-green .cta} -->
+
 
 ::::
+
 
 :::: 
 
@@ -243,14 +240,53 @@ a:hover {
 
 :::: {.ph4}
 
-:::: {.navy .f4 .tl}
-[for model validators]{.smallcaps}
+:::: {.f4 .tl}
+[model validation]{.smallcaps .accent}
 ::::
+
+::: {.tl}
+Quickly **assess compliance** by linking evidence from developers in your validation reports.
+
+**Tailor validation** to any regulatory or internal standard, and let ValidMind generate recommendations including for SR 11-7, SS1/23, E-23, and the EU AI Act.
+
+You can even create **challenger models**.
+:::
 
 :::{#validator}
 :::
 
-[validation guidelines](guide/model-validation/manage-validation-guidelines.qmd){.button-green .cta}
+<!-- [developer reference](/validmind/validmind.html){.button-green .cta} -->
+
+::::
+
+::::
+
+:::
+
+::: {.w-25-ns .mb4}
+
+:::: {.ba .b--black-10 .br3 .shadow-4 .bg-white .pt4 .pb3 .h-100 .grow .tc}
+
+:::: {.ph4}
+
+:::: {.f4 .tl}
+[setup + administration]{.smallcaps .accent}
+::::
+
+::: {.tl}
+**Invite users** and **control access** to ValidMind by managing user roles, groups, and permissons.
+
+**Customize** the platform to **onboard** your organization, including:
+
+- Model inventory & registration
+- Documentation templates
+- Lifecycle workflows
+:::
+
+:::{#admin}
+:::
+
+<!-- [developer reference](/validmind/validmind.html){.button-green .cta} -->
 
 ::::
 
@@ -258,6 +294,7 @@ a:hover {
 
 :::
 
+<span id="overview"></span>
 
 ::: {.w-10-ns}
 <!-- FILLER COLUMN DO NOT REMOVE -->
@@ -267,9 +304,110 @@ a:hover {
 
 :::
 
-<!-- TRAINING SECTION -->
+<!-- OVERVIEW SECTION -->
+
+::: {.column-screen}
+
+:::: {.flex .flex-wrap .justify-around .overview}
+
+
+::: {.w-20-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
+
+![](assets/img/icon-trust.svg){height=50px}
+
+:::: {.f4}
+Evelate [Model Risk Management]{.pink}
+:::: 
+
+:::: {.f5}
+Proactively identify and mitigate risks for more robust, reliable models.
+::::
+
+:::
+
+::: {.w-20-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
+
+![](assets/img/bevalid-check.svg){height=50px}
+
+:::: {.f4}
+Stay [Compliant]{.pink}
+:::: 
+
+:::: {.f5}
+Meet even the most demanding legislation and governance policies.
+::::
+
+:::
+
+::: {.w-20-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
+
+![](assets/img/icon-connect.svg){height=50px}
+
+:::: {.f4}
+Collaborate to [Innovate]{.pink}
+:::: 
+
+:::: {.f5}
+Bring together cross-functional teams to ensure transparency.
+::::
+
+:::
+
+::: {.w-20-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
+
+![](assets/img/icon-automate.svg){height=50px}
+
+:::: {.f4}
+[Monitor]{.pink} for Success
+:::: 
+
+:::: {.f5}
+Keep your models performing with continous evaluation before problems arise.
+::::
+
+
+:::
+
+
+::::
+
+:::
+
+<!-- PRODUCT TOUR -->
 
 ::: {.column-page}
+
+:::: {.flex .flex-wrap .justify-around .tour}
+
+::: {.w-40-ns .mb3 .tr .pt4}
+
+::: {.image-container}
+![](assets/img/platform-line-1.png)
+![](assets/img/platform-line-2.png)
+![](assets/img/platform-line-3.png)
+![](assets/img/platform-line-4.png)
+![](assets/img/platform-line-5.png)
+:::
+
+:::
+
+::: {.w-60-ns .mb3 .tc .pt4 .pr6}
+
+::: {.preview source="training/fake-tour/product-tour.qmd"}
+:::
+
+[What is ValidMind?](/about/overview.qmd){.button .button-green}
+
+:::
+
+
+::::
+
+:::
+
+<!-- TRAINING SECTION -->
+
+<!-- ::: {.column-page}
 
 
 :::: {.flex .flex-wrap .justify-around .training}
@@ -277,7 +415,7 @@ a:hover {
 
 :::: {.f2}
 ![](about/ValidMind-logo-color.svg){height=50px} **Academy**
-:::: 
+::::
 
 :::: {.f4}
 Gain **hands-on experience** and explore what {{< var vm.product >}} has to offer with our interactive training environment.
@@ -292,66 +430,42 @@ Gain **hands-on experience** and explore what {{< var vm.product >}} has to offe
 
 ::::
 
-:::
+::: -->
 
-<!-- OVERVIEW SECTION -->
+<!-- TRAINING WIP SECTION -->
 
 ::: {.column-screen}
 
-:::: {.flex .flex-wrap .justify-around .overview}
+:::: {.flex .flex-wrap .justify-around .training}
 
 ::: {.w-10-ns}
 <!-- FILLER COLUMN DO NOT REMOVE -->
 :::
 
-::: {.w-25-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
 
-![](assets/img/icon-trust.svg)
+::: {.w-50-ns .mb4 .tc .ph2 .br3 .pt4 .pb3 .ph4}
 
-:::: {.f3}
-[Be]{.pink}**Valid.**
-:::: 
+:::: {.f2}
+![](about/ValidMind-logo-color.svg){height=50px} **Academy**
 
-:::: {.f4}
-Accelerate innovation, unlock advanced potential, and deploy with compliance.
 ::::
 
-[request a demo](https://validmind.com/contact/){.button-pink .cta}
+:::: {.f3}
+Gain **hands-on experience** and explore what {{< var vm.product >}} has to offer with our interactive training environment.
+
+::::
+<br>
+
+:::{#validmind-academy}
+:::
 
 :::
 
-::: {.w-25-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
+::: {.w-30-ns .mb4 .tc .ph2 .br3 .pt4 .pb3 .ph4}
 
-![](assets/img/icon-connect.svg)
-
-:::: {.f3}
-Events
-:::: 
-
-:::: {.f4}
-Connect with the {{< var vm.product >}} team at events for the model and AI risk community.
-::::
-
-[find events](https://validmind.com/events/){.button-pink .cta}
+![](assets/img/hero-platform.png)
 
 :::
-
-::: {.w-25-ns .mb4 .tc .ph2 .br3 .bg-washed-blue .pt4 .pb3 .ph4}
-
-![](assets/img/icon-automate.svg)
-
-:::: {.f3}
-Blog
-:::: 
-
-:::: {.f4}
-Gain insights through our original content on model risk management.
-::::
-
-[read our blog](https://validmind.com/blog/){.button-pink .cta}
-
-:::
-
 
 ::: {.w-10-ns}
 <!-- FILLER COLUMN DO NOT REMOVE -->
@@ -372,28 +486,11 @@ Gain insights through our original content on model risk management.
 <!-- FILLER COLUMN DO NOT REMOVE -->
 :::
 
-::: {.w-70-ns .mb4}
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-70-ns}
+::: {.w-80-ns .mb4}
 
 :::: {.f2}
 Latest Releases
-
-::::
-
-:::
-
-::: {.w-30-ns .tr}
-:::: {.f4}
-[[all releases {{< fa chevron-right >}} ](releases/all-releases.qmd)]{.smallcaps}
-
-:::
-
-:::
-
-::::
+:::: 
 
 :::{#releases}
 :::
