--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -191,14 +191,14 @@ When you add `background-interactive="yes"` to the `background-iframe` element, 
 
 ## {background-iframe="https://app.prod.validmind.ai/" data-preload="yes"}
 
-:::: {.slideover--l .auto-collapse .quarters}
+:::: {.slideover--l .auto-collapse .three-quarters}
 **This is a collapsible left-aligned modal (`slideover--l`) at three-quarters size on top of the live {{< var vm.product >}} Platform.**
 
 When you add `.auto-collapse` to the slideover, the modal will auto-collapse after five seconds for that slide.
 
 You can adjust the size of the modals, for more or less screen real estate:
 
-- `.quarters` — 3/4s or 75% of the default width.
+- `.three-quarters` — 3/4s or 75% of the default width.
 - `.half` — 1/2s or 50% of the default width.
 - `.third` — 1/3 or 33ish% of the default width.
 
