Pulled in the changes from VAlidmind-library

--- a/site/notebooks/EXECUTED/model_validation/3-developing_challenger_model.ipynb
+++ b/site/notebooks/EXECUTED/model_validation/3-developing_challenger_model.ipynb
@@ -520,7 +520,7 @@
     "\n",
     "## Running model evaluation tests\n",
     "\n",
-    "With everything ready for us, let's run the rest of our validation tests. We'll focus on comprehensive testing around model performance of both the champion and challenger models going forward as we've already verified the data quality of the datasets used to train the champion model."
+    "With our setup complete, let's run the rest of our validation tests. Since we have already verified the data quality of the dataset used to train our champion model, we will now focus on comprehensive performance evaluations of both the champion and challenger models."
    ]
   },
   {
@@ -586,8 +586,8 @@
     "\n",
     "Now, let's run and log our batch of model performance tests using our testing dataset (`vm_test_ds`) for our champion model:\n",
     "\n",
-    "- Here, the testing set serves as a proxy for real-world data, as it was untouched during training or tuning, giving us a more authentic estimate of performance.\n",
-    "- The testing set acts as protection against selection bias and model tweaking, giving a final, more unbiased checkpoint."
+    "- The test set serves as a proxy for real-world data, providing an unbiased estimate of model performance since it was not used during training or tuning.\n",
+    "- The test set also acts as protection against selection bias and model tweaking, giving a final, more unbiased checkpoint."
    ]
   },
   {
@@ -728,9 +728,9 @@
     "\n",
     "### Run diagnostic tests\n",
     "\n",
-    "Next we want to inspect the robustness and stability testing comparison between our champion and challenger model.\n",
+    "Next, we want to inspect the robustness and stability testing comparison between our champion and challenger model.\n",
     "\n",
-    "Use `list_tests()` to identify all the model diagnosis tests for classification:"
+    "Use `list_tests()` to list all available diagnosis tests applicable to classification tasks:"
    ]
   },
   {
@@ -746,7 +746,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see if models suffer from any *overfit* potentials and also where there are potential sub-segments of issues with the [`OverfitDiagnosis` test](https://docs.validmind.ai/tests/model_validation/sklearn/OverfitDiagnosis.html). \n",
+    "Let’s now assess the models for potential signs of *overfitting* and identify any sub-segments where performance may inconsistent with the [`OverfitDiagnosis` test](https://docs.validmind.ai/tests/model_validation/sklearn/OverfitDiagnosis.html).\n",
     "\n",
     "Overfitting occurs when a model learns the training data too well, capturing not only the true pattern but noise and random fluctuations resulting in excellent performance on the training dataset but poor generalization to new, unseen data:\n",
     "\n",
@@ -773,9 +773,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's also conduct *robustness* and *stability* testing of the two models with the [`RobustnessDiagnosis` test](https://docs.validmind.ai/tests/model_validation/sklearn/RobustnessDiagnosis.html).\n",
+    "Let's also conduct *robustness* and *stability* testing of the two models with the [`RobustnessDiagnosis` test](https://docs.validmind.ai/tests/model_validation/sklearn/RobustnessDiagnosis.html). Robustness refers to a model's ability to maintain consistent performance, and stability refers to a model's ability to produce consistent outputs over time across different data subsets.\n",
     "\n",
-    "Robustness refers to a model's ability to maintain consistent performance, and stability refers to a model's ability to produce consistent outputs over time across different data subsets.  Again, we'll use both the training and testing dataset to evaluate baseline performance and to simulate real-word generalization."
+    "Again, we'll use both the training and testing datasets to establish baseline performance and to simulate real-world generalization:"
    ]
   },
   {
