--- a/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
+++ b/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
@@ -1364,9 +1364,9 @@
     "\n",
     "## Run diagnostic tests\n",
     "\n",
-    "Next we want to inspect the robustness and stability testing comparison between our champion and challenger model.\n",
+    "Next, we want to inspect the robustness and stability testing comparison between our champion and challenger model.\n",
     "\n",
-    "Use `list_tests()` to identify all the model diagnosis tests for classification:"
+    "Use `list_tests()` to list all available diagnosis tests applicable to classification tasks:"
    ]
   },
   {
