--- a/site/notebooks/quickstart/quickstart_model_validation.ipynb
+++ b/site/notebooks/quickstart/quickstart_model_validation.ipynb
@@ -320,10 +320,9 @@
     "\n",
     "### Initialize the Python environment\n",
     "\n",
-    "Then, let's import the necessary libraries and set up your Python environment for data analysis:\n",
+    "Then, let's import the necessary libraries and set up your Python environment for data analysis by enabling **`matplotlib`**, a plotting library used for visualizing data.\n",
     "\n",
-    "- Import **Extreme Gradient Boosting** (XGBoost) with an alias so that we can reference its functions in later calls. XGBoost is a powerful machine learning library designed for speed and performance, especially in handling structured or tabular data.\n",
-    "- Enable **`matplotlib`**, a plotting library used for visualizing data. Ensures that any plots you generate will render inline in our notebook output rather than opening in a separate window."
+    "This ensures that any plots you generate will render inline in our notebook output rather than opening in a separate window:"
    ]
   },
   {
@@ -333,7 +332,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xgboost as xgb\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -498,7 +496,7 @@
     "1. **Inputs** — Features such as customer age, usage, etc.\n",
     "2. **Outputs (Expected answers/labels)** — in our case, we would like to know whether the customer churned or not.\n",
     "\n",
-    "Here, we'll use `x_train` and `x_val` to hold the input data (features), and `y_train` and `y_val` to hold the answers (the target we want to predict):"
+    "Here, we'll use `x_train` to hold the input features, and `y_train` to hold the target variable — the values we want the model to predict:"
    ]
   },
   {
@@ -509,9 +507,7 @@
    "outputs": [],
    "source": [
     "x_train = train_df.drop(customer_churn.target_column, axis=1)\n",
-    "y_train = train_df[customer_churn.target_column]\n",
-    "x_val = validation_df.drop(customer_churn.target_column, axis=1)\n",
-    "y_val = validation_df[customer_churn.target_column]"
+    "y_train = train_df[customer_churn.target_column]"
    ]
   },
   {
@@ -760,10 +756,9 @@
    "outputs": [],
    "source": [
     "# Import the champion model\n",
-    "import pickle as pkl\n",
+    "import joblib\n",
     "\n",
-    "with open(\"xgboost_model_champion.pkl\", \"rb\") as f:\n",
-    "    xgboost = pkl.load(f)"
+    "xgboost = joblib.load(\"xgboost_model_champion.pkl\")"
    ]
   },
   {
@@ -836,7 +831,7 @@
     "\n",
     "## Running model evaluation tests\n",
     "\n",
-    "With everything ready for us, let's run the rest of our validation tests. We'll focus on testing around model performance of the champion model going forward as we've already verified the data quality of the datasets used to train the champion model."
+    "With our setup complete, let's run the rest of our validation tests. Since we have already verified the data quality of the dataset used to train our champion model, we will now focus on evaluating the model's performance."
    ]
   },
   {
@@ -890,8 +885,8 @@
    "source": [
     "Now, let's run and log our batch of model performance tests using our testing dataset (`vm_test_ds`) for our champion model:\n",
     "\n",
-    "- Here, the testing set serves as a proxy for real-world data, as it was untouched during training or tuning, giving us a more authentic estimate of performance.\n",
-    "- The testing set acts as protection against selection bias and model tweaking, giving a final, more unbiased checkpoint."
+    "- The test set serves as a proxy for real-world data, providing an unbiased estimate of model performance since it was not used during training or tuning.\n",
+    "- The test set also acts as protection against selection bias and model tweaking, giving a final, more unbiased checkpoint."
    ]
   },
   {
@@ -919,7 +914,7 @@
     "\n",
     "### Run diagnostic tests\n",
     "\n",
-    "Next we want to inspect the robustness and stability for our champion model. Use `list_tests()` to identify all the model diagnosis tests for classification:"
+    "Next, we want to inspect the robustness and stability of our champion model. Use `list_tests()` to list all available diagnosis tests applicable to classification tasks:"
    ]
   },
   {
@@ -937,7 +932,7 @@
    "id": "ecefecac",
    "metadata": {},
    "source": [
-    "Let's see if the model suffers from any *overfit* potentials and also where there are potential sub-segments of issues. \n",
+    "Let’s now assess the model for potential signs of *overfitting* and identify any sub-segments where performance may inconsistent.\n",
     "\n",
     "Overfitting occurs when a model learns the training data too well, capturing not only the true pattern but noise and random fluctuations resulting in excellent performance on the training dataset but poor generalization to new, unseen data:\n",
     "\n",
@@ -966,9 +961,12 @@
    "id": "c7f7988e",
    "metadata": {},
    "source": [
-    "Let's also conduct *robustness* and *stability* testing. Robustness refers to a model's ability to maintain consistent performance, and stability refers to a model's ability to produce consistent outputs over time across different data subsets.\n",
+    "Let's also conduct *robustness* and *stability* tests.\n",
     "\n",
-    "Again, we'll use both the training and testing dataset to evaluate baseline performance and to simulate real-word generalization:"
+    "- Robustness evaluates the model’s ability to maintain consistent performance under varying input conditions.\n",
+    "- Stability assesses whether the model produces consistent outputs across different data subsets or over time.\n",
+    "\n",
+    "Again, we'll use both the training and testing datasets to establish baseline performance and to simulate real-world generalization:"
    ]
   },
   {
@@ -1030,8 +1028,8 @@
     "for test in FI:\n",
     "    vm.tests.run_test(\n",
     "        \"\".join((test,':xgboost_champion')),\n",
-    "        input_grid={\n",
-    "            \"dataset\": [vm_test_ds], \"model\" : [vm_xgboost]\n",
+    "        inputs={\n",
+    "            \"dataset\": vm_test_ds, \"model\": vm_xgboost\n",
     "        },\n",
     "    ).log()"
    ]
